--- a/pages/registro/registro.css
+++ b/pages/registro/registro.css
@@ -1,5 +1,5 @@
 .posts_container_form {
-    margin: 50px 550px;
+    margin: 5vh 30vw;
     align-items: center;
     border: 1px solid;
     border-radius: 10px;
@@ -8,9 +8,9 @@
 }
 
 .post_container_form-titulo {
-    margin-bottom: 80px;
-    margin-top: 20px;
-    margin-right: 380px;
+    margin-bottom: 6vh;
+    margin-top: 2vh;
+    margin-right: 20vw;
 }
 
 .post_container_form_inputs {
@@ -21,8 +21,8 @@
 .post_container_form_inputs > div {
     display: flex;
     justify-content: space-around;
-    margin-bottom: 35px;
-    width: 400px;
+    margin-bottom: 5vh;
+    width: 23vw;
 }
 
 .post_container_form_inputs > div > input {
@@ -31,30 +31,49 @@
     border-right: 0ch;
     border-top: 0ch;
     font-size: medium;
-    height: 25px;
+    height: 4vh;
     outline: none;
-    width: 250px;
+    width: 14vw;
 }
 
 .post_container_form_radios {
     display: flex;
     justify-content: space-between;
-    margin-bottom: 30px;
-    margin-top: 20px;
-    width: 200px;
+    margin-bottom: 4vh;
+    margin-top: 3vh;
+    width: 15vw;
 }
 
 .post_container_form-button {
-    margin-bottom: 100px;
-    margin-top: 20px;
+    margin-bottom: 13vh;
+    margin-top: 3vh;
 }
 
 .post_container_form-button {
-    border-radius: 6px;
+    border-radius: 5px;
     border-style: initial;
     background-color: #ff7e67;
     color: white;
-    height: 35px;
+    height: 5vh;
     outline: none;
-    width: 150px;
+    width: 11vw;
+}
+
+@media (max-width: 600px) {
+    .posts_container_form {
+        border: none;
+        display: flex;
+    }
+
+    .post_container_form_inputs > div > input {
+        width: 50vw;
+    }
+
+    .post_container_form_radios {
+        width: 55vw;
+    }
+
+    .post_container_form-button {
+        width: 35vw;
+    }
 }
