--- a/pages/login/login.css
+++ b/pages/login/login.css
@@ -1,26 +1,31 @@
 .posts_container_form {
-    margin: 3em 28em;
-    align-items: center;
-    border: 1px solid;
-    border-radius: 10px;
-    display: flex;
-    flex-direction: column;
+    margin: 5vh 26vw;
 }
 
 .posts {
-    height: 25em;
+    height: 80%;
 }
 
 .post_container_form-titulo {
-    margin-bottom: 1em;
-    margin-right: 34em;
+    margin-bottom: 2vh;
+    margin-right: 24vw;
+}
+
+.post_container_form_inputs > div > input {
+    width: 16vw;
 }
 
 .post_container_form_button {
-    height: 5em;
-    margin-bottom: 1em;
+    height: 4vh;
+    margin-bottom: 10vh;
+}
+
+.post_container_form-button {
+    border-radius: 10px;
 }
 
 @media (max-width: 600px) {
-    
+    .post_container_form-titulo {
+        margin-right: 0.2vw;
+    }
 }
