--- a/pages/layout/index.html
+++ b/pages/layout/index.html
@@ -9,17 +9,19 @@
 <body>
     <header>
         <div class="header_logo">
-            <img class="header_logo-imagenLogo" src="https://scontent.fmid1-2.fna.fbcdn.net/v/t1.0-9/116343728_183186249897592_7872352272283125949_n.jpg?_nc_cat=106&ccb=2&_nc_sid=8bfeb9&_nc_eui2=AeEM4VG5wuIOg1rECOfVrTaFXFMpF1P_NYFcUykXU_81gaHrdnYk_wVVBZjyrIXlqrM2A8SYAy6q2in4krnyAp9t&_nc_ohc=-2UQdY84-BIAX8P702f&_nc_ht=scontent.fmid1-2.fna&oh=2ee861b4863fb067df71a1df11660677&oe=60108201" alt="Imagen Intra salud">
+            <a href="/pages/inicio/index.html">
+                <img class="header_logo-imagenLogo" src="https://scontent.fmid1-2.fna.fbcdn.net/v/t1.0-9/116343728_183186249897592_7872352272283125949_n.jpg?_nc_cat=106&ccb=2&_nc_sid=8bfeb9&_nc_eui2=AeEM4VG5wuIOg1rECOfVrTaFXFMpF1P_NYFcUykXU_81gaHrdnYk_wVVBZjyrIXlqrM2A8SYAy6q2in4krnyAp9t&_nc_ohc=-2UQdY84-BIAX8P702f&_nc_ht=scontent.fmid1-2.fna&oh=2ee861b4863fb067df71a1df11660677&oe=60108201" alt="Imagen Intra salud">
+            </a>
         </div>
         <div class="header_busqueda">
-            <a href=""><img alt="icono de buscar" class="header_busqueda-imagenLupa" src="../../assets/iconoLupa.png"></a>
+            <a href="../inicio/"><img alt="icono de buscar" class="header_busqueda-imagenLupa" src="../../assets/iconoLupa.png"></a>
             <a class="header_busqueda-SignUp" href="">Sign up</a> |
             <button class="header_busqueda-buttonLogin" id="Login">Login</button>
         </div>
     </header>
     <nav class="navegacion">
         <div class="navegacion_selectores">
-            <a href="" >Inicio</a>
+            <a href="../inicio/" >Inicio</a>
             <a href="" >Sobre mí</a>
             <a href="" >Blog</a>
             <a href="" >Contacto</a>
