--- a/pages/post/post.css
+++ b/pages/post/post.css
@@ -1,4 +1,4 @@
-main{
+.post{
     max-width: 1200px;
     margin: 50px auto;
     border-radius: 5px;
@@ -32,6 +32,45 @@ main{
     display: flex;
     flex-direction: column;
     margin: 2vh 2vw;
+}
+
+.comments {
+    border-radius: 5px;
+    box-shadow: 1px 1px 4px grey;    
+    margin: 50px auto;
+    max-width: 1200px;
+}
+
+.comments_container {
+    display: flex;
+    flex-direction: column;
+}
+
+.comments_container > div {
+    border-radius: 5px;
+    box-shadow: 1px 1px 4px grey; 
+    margin: 3vh;
+    height: 20vh;
+    padding: 2vh;
+    display: flex;
+    flex-direction: row;
+}
+
+.comments_container > div > .perfil {
+    display: flex;
+    flex-direction: column;
+    font-size: small;
+    margin: 0.8vh;
+}
+
+.comments_container > div > .perfil > img {
+    border-radius: 50vw;
+    height: 8vh;
+    width: 4vw;
+}
+
+.comment_containt > label{
+    
 }
 
 @media screen and (max-width: 715px) {
