--- a/pages/layout/index.html
+++ b/pages/layout/index.html
@@ -16,7 +16,7 @@
         <div class="header_busqueda">
             <a href="../busqueda/index.html"><img alt="icono de buscar" class="header_busqueda-imagenLupa" src="../../assets/iconoLupa.png"></a>
             <a class="header_busqueda-SignUp" href="../registro/registro.html">Sign up</a> |
-            <button class="header_busqueda-buttonLogin" id="Login">Login</button>
+            <button class="header_busqueda-buttonLogin" href="../login/login.html" id="Login">Login</button>
         </div>
     </header>
     <nav class="navegacion">
