--- a/public/css/post.css
+++ b/public/css/post.css
@@ -13,6 +13,22 @@
     justify-content: center;
 }
 
+.post-print {
+    display: flex;
+    justify-content: center;
+}
+
+.post-print > button {
+    border-radius: 8px;
+    border-style: initial;
+    background-color: #ff7e67;
+    color: white;
+    height: 40px;
+    margin-bottom: 5vh;
+    outline: none;
+    width: 125px;
+}
+
 .post_container {
     color: rgb(80, 79, 79);
 }
