--- a/public/css/about.css
+++ b/public/css/about.css
@@ -51,3 +51,13 @@ main pre{
         padding: 30px;
     }
 }
+
+@media print {
+    * {
+        font-size: large;
+    }
+
+    main {
+        box-shadow: none;
+    }
+}
