--- a/public/css/buscar.css
+++ b/public/css/buscar.css
@@ -38,7 +38,6 @@ main{
 
 /******MEDIA QUERIES*******/
 
-
 @media screen and (max-width: 715px){
     article{
         display: block;
@@ -51,5 +50,11 @@ main{
     }
     main h2{
         font-size: 5vw;
+    }
+}
+
+@media print {
+    * {
+        font-size: large;
     }
 }
